# XXHashVerify

./: Cargo.toml
src/: lib.rs  main.rs
